[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ustb"
version = "0.1.0"
description = "Python reimplementation of the UltraSound ToolBox (USTB) for beamforming, processing, and visualization of ultrasonic signals."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Ole Marius Hoel Rindal", email = "omrindal@ifi.uio.no" },
    { name = "USTB Contributors" },
]
keywords = ["ultrasound", "beamforming", "signal-processing", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyuff-ustb>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://www.ustb.no"
Repository = "https://github.com/unioslo/USTB"
Documentation = "https://olemarius90.github.io/USTB/documentation.html"

[tool.hatch.build.targets.wheel]
packages = ["src/ustb"]
